--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -1644,7 +1644,7 @@ html {
 .modern-prices {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   gap: 10px;
   width: 100%;
 }
