--- a/asset/style/wishlist.css
+++ b/asset/style/wishlist.css
@@ -913,7 +913,7 @@ input[type="checkbox"]:checked+.heart-icon {
 .price-buttons1 {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   gap: 8px;
   margin-bottom: 10px;
   flex-wrap: wrap;
